Improved sample to clarify syntax involving variable substitution.

--- a/examples/equal_sign_syntax_sample.env
+++ b/examples/equal_sign_syntax_sample.env
@@ -1,8 +1,9 @@
 
 # Comment
 VARIBLE2=432
-TEST2='$needsToBeQuotedInSingleQuotes'
+TEST2='$needsToBeQuotedInSingleQuotesWhenNotAVariable'
 TEST3="database://someone@${SOME_EXTERNAL_VAR_SUBSTITUTION}/location"
+TEST4=$VARIABLE4
 
 THIS_LINE_SHOULD_CONTAIN_NO_COMMENT="something-with-a-#-hash-symbol"
 
