--- a/examples/mixed_syntax_usage_sample.env
+++ b/examples/mixed_syntax_usage_sample.env
@@ -5,10 +5,13 @@ export BAR=BAX
 # More mixing
 VARIABLE1: 342
 VARIBLE2=432
-TEST0: '$needsToBeQuotedUsingSingleQuotes'
+TEST0: '$needsToBeQuotedInSingleQuotesWhenNotAVariable'
 TEST1: "database://someone@${SOME_EXTERNAL_VAR}/location" # Another comment
-TEST2='$needsToBeQuotedInSingleQuotes'
+TEST2='$needsToBeQuotedInSingleQuotesWhenNotAVariable'
 TEST3="database://someone@${SOME_EXTERNAL_VAR_SUBSTITUTION}/location"
+TEST4=$VARIABLE4
+TEST5: $VARIABLE5
+export TEST6=$VAR6
 export TEST_COMMaND_SUSTITUTION=$(whoami) # comment here as well
 
 THIS_LINE_SHOULD_CONTAIN_NO_COMMENT="something-with-a-#-hash-symbol"
