--- a/examples/yaml-ish_syntax_sample.env
+++ b/examples/yaml-ish_syntax_sample.env
@@ -1,5 +1,6 @@
 VARIABLE1: 342
-TEST0: '$needsToBeQuotedUsingSingleQuotes'
+TEST0: '$needsToBeQuotedInSingleQuotesWhenNotAVariable'
 DATABASE_PASSWORD: FakeP@SSw0rd # This is a comment
 TEST1: "database://someone@${SOME_EXTERNAL_VAR}/location" # Another comment
+TEST5: $VARIABLE5
 USER: bot1
