--- a/examples/sh_export_syntax_sample.env
+++ b/examples/sh_export_syntax_sample.env
@@ -1,6 +1,7 @@
 # Comment
 export BAR=BAX
 export  EXTRA_SPACE=90
+export	TAB_SPACE=432
 export TEST6=$VAR6
 export TEST_COMMaND_SUSTITUTION=$(whoami) # comment here as well
 export VAR42=21
