Changed documentation string on dotenv defgroup. Improved readability of examples/failure.env.

--- a/examples/failures.env
+++ b/examples/failures.env
@@ -1,7 +1,7 @@
 
 ###############
-# Test case 1 #
+# Test Case 1 #
 ###############
 
-export TEST=21  # There should be variable highlighting on this line
-export TEST: 21 # There should not be variable highlighting on this line
+export Test1Pass=21  # There should be variable highlighting on this line
+export Test1Fail: 21 # There should not be variable highlighting on this line
