Added new test case for testing highlighting of $VARIABLES, ${SUBSTITUTED_VARIABLES}, and $(COMMAND SUBSTITUTION) embedded in strings.

--- a/examples/failures.env
+++ b/examples/failures.env
@@ -5,3 +5,11 @@
 
 export Test1Pass=21  # There should be variable highlighting on this line
 export Test1Fail: 21 # There should not be variable highlighting on this line
+
+
+###############
+# Test Case 2 #
+###############
+
+Test2Pass="hello $FOO, ${FOO1}, and $(FOO2)"
+Test2Fail='hello $FOO, ${FOO1}, and $(FOO2)' # No interpolation in single-quotes
